# igvc_software_2026

./: .gitignore  Docker  Dockerfile  README.md  ramblings.md
.github/workflows/: compile.yml
igvc_ui/: package-lock.json  package.json
igvc_ui/src/: app.css
igvc_ui/src/components/: main-layout.svelte  navbar.svelte  sidebar.svelte
igvc_ui/src/components/pages/dashboard/: camera-view.svelte  dashboard.svelte  device-states.svelte
igvc_ui/src/lib/: igvc.ts
igvc_ui/src/routes/: +layout.svelte  +page.svelte
igvc_ws/install/: local_setup.sh  setup.sh
igvc_ws/log/: latest_build
igvc_ws/src/igvc/: CMakeLists.txt  package.xml
igvc_ws/src/igvc/include/igvc/: config.hpp  defs.hpp  node.hpp  topics.hpp  units.hpp  utilities.hpp
igvc_ws/src/igvc/src/: commander.cpp  node.cpp
igvc_ws/src/igvc_display/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_display/include/igvc_display/: clay.h  clayrib.h  limiter.hpp  packets.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/: client.hpp  close.hpp  connection.hpp  endpoint.hpp  error.hpp  frame.hpp  server.hpp  uri.hpp  utf8_validator.hpp  utilities.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/common/: asio.hpp  chrono.hpp  connection_hdl.hpp  functional.hpp  memory.hpp  network.hpp  random.hpp  system_error.hpp  thread.hpp  type_traits.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/concurrency/: basic.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/config/: asio.hpp  asio_client.hpp  asio_no_tls.hpp  asio_no_tls_client.hpp  core.hpp  core_client.hpp  debug.hpp  debug_asio.hpp  debug_asio_no_tls.hpp  minimal_client.hpp  minimal_server.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/extensions/: extension.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/extensions/permessage_deflate/: disabled.hpp  enabled.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/http/: parser.hpp  request.hpp  response.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/http/impl/: request.hpp  response.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/impl/: connection_impl.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/logger/: basic.hpp  levels.hpp  stub.hpp  syslog.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/message_buffer/: alloc.hpp  message.hpp  pool.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/processors/: base.hpp  hybi00.hpp  hybi07.hpp  hybi08.hpp  hybi13.hpp  processor.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/random/: random_device.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/roles/: client_endpoint.hpp  server_endpoint.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/transport/asio/: base.hpp  connection.hpp  endpoint.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/transport/asio/security/: base.hpp  none.hpp  tls.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/transport/base/: connection.hpp  endpoint.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/transport/debug/: base.hpp  connection.hpp  endpoint.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/transport/iostream/: base.hpp  connection.hpp  endpoint.hpp
igvc_ws/src/igvc_display/include/igvc_display/websocketpp/transport/stub/: base.hpp  connection.hpp  endpoint.hpp
igvc_ws/src/igvc_display/resources/: example_shader.fs
igvc_ws/src/igvc_display/src/: camera_adapter.cpp  data_adapter.cpp  main.cpp
igvc_ws/src/igvc_hardware/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_hardware/include/igvc_hardware/: can.hpp  joy.hpp
igvc_ws/src/igvc_hardware/src/: can.cpp  controller.cpp  vn.cpp
igvc_ws/src/igvc_launch/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_launch/launch/: test.xml
igvc_ws/src/igvc_messages/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_messages/msg/: GPSFeedback.msg  IGVCDeviceInit.msg  IGVCDeviceState.msg  IGVCSystemContext.msg  SafetyLights.msg
igvc_ws/src/igvc_messages/srv/: UpdateConfiguration.srv  UpdateSystemContext.srv
igvc_ws/src/igvc_vision/: CMakeLists.txt  package.xml
igvc_ws/src/igvc_vision/include/igvc_vision/: pipeline.hpp
igvc_ws/src/igvc_vision/src/: main.cpp  pipeline.cpp  yolo.cpp
setup/: dependencies.sh  install_vn.sh  install_yolo.sh
